home/static/css/text_page.css
body {
    background-color: #30f8ab;
}

.content {
    background-color: #30f8ab;
    min-height: calc(100vh - 16px);
    display: flex;
    flex-direction: column;
}

@media screen and (width > 500px) {
    body {
        margin: 0 80px;
        background-color: #24ba80;
    }

    .content {
        padding: 8px 20px;
        box-shadow:
            0px 0px 60px -2px rgba(48, 248, 171, 1),
            0px 0px 40px -16px rgba(185, 238, 216, 0.75),
            inset 0px -50px 100px -50px rgba(226, 247, 238, 0.5);
    }
}

